--- a/numerics.ipynb
+++ b/numerics.ipynb
@@ -68,16 +68,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "2cb41fe3",
+   "cell_type": "markdown",
+   "id": "b768e986",
    "metadata": {},
+   "source": [
+    "The integrand $$\\sigma_i(x+z) = \\sigma_{0,i} + \\sum_{j} \\sigma_{1,i,j}z_j + \\sum_{j,k} \\sigma_{2,i,j,k}z_jz_k + \\sum_{j,k} \\sigma_{3,i,j,k,\\ell}z_jz_kz_\\ell$$ is implemented in Cython to speed up the integration, see below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2cb41fe3",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:16805:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:16802:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
       "  0, /*tp_print*/\n",
       "  ^\n",
       "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
@@ -86,7 +96,7 @@
       "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
       "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
       "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:16927:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:16924:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
       "  0, /*tp_print*/\n",
       "  ^\n",
       "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
@@ -95,7 +105,7 @@
       "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
       "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
       "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:17191:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:17188:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
       "  0, /*tp_print*/\n",
       "  ^\n",
       "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
@@ -104,7 +114,7 @@
       "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
       "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
       "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:17340:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:17337:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
       "  0, /*tp_print*/\n",
       "  ^\n",
       "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
@@ -113,16 +123,16 @@
       "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
       "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
       "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:19985:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:19982:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
       "                    CYTHON_FALLTHROUGH;\n",
       "                    ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:364:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:361:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
       "      #define CYTHON_FALLTHROUGH __attribute__((fallthrough))\n",
       "                                 ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:19996:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:19993:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
       "                    CYTHON_FALLTHROUGH;\n",
       "                    ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_12f42c70321822fdfd2c0e4b95ed4c3f.c:364:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
+      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:361:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
       "      #define CYTHON_FALLTHROUGH __attribute__((fallthrough))\n",
       "                                 ^\n",
       "6 warnings generated.\n"
@@ -174,7 +184,10 @@
     "@cdivision(True)\n",
     "cdef double integrand_main(int n, double* phi_r, void* user_data):\n",
     "    \"\"\"The integrand, written in Cython\"\"\"\n",
-    "    # Extract the value of p, vector e, and matrix A\n",
+    "    # Extract the value of p, power alpha, normalization constant c,\n",
+    "    # and polynomial coefficients sig0, sig1, sig2, and sig3\n",
+    "    # We also use the end of the data array as temporary buffer for\n",
+    "    # computing z and sigma\n",
     "    # Cython uses array access syntax for pointer dereferencing!\n",
     "    cdef double  p    = (<double*>user_data)[0]\n",
     "    cdef double alpha = (<double*>user_data)[1]\n",
@@ -286,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "64040b67",
    "metadata": {},
    "outputs": [],
@@ -297,8 +310,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d41dafc4",
+   "metadata": {},
+   "source": [
+    "This is just a warap-around the lower level Cython code, which computes the normalization constant before calling the numerical quadrature."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "b6cebb2b",
    "metadata": {},
    "outputs": [],
@@ -322,8 +343,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6783147a",
+   "metadata": {},
+   "source": [
+    "Finally, we generate four random arrays of coefficients and compare the \"analytical\" value of the divergence with the numerical approximation of the integral for small $\\delta$.  We expect the two to be close to each other."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "216da86e",
    "metadata": {},
    "outputs": [
@@ -332,14 +361,43 @@
      "output_type": "stream",
      "text": [
       "n = 3\n",
-      "p = 1.250000\n",
-      "alpha = -3.000000\n",
+      "p = 1.500000\n",
+      "alpha = -2.666667\n",
       "delta        = 0.000001\n",
-      "div sigma(0) = 1.172941\n",
-      "integral     = 1.174090\n",
-      "error        = 0.001150\n",
-      "CPU times: user 10min 56s, sys: 10.1 s, total: 11min 6s\n",
-      "Wall time: 11min 8s\n"
+      "div sigma(0) = 0.362177\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/lib/python3.8/site-packages/scipy/integrate/quadpack.py:879: IntegrationWarning: The occurrence of roundoff error is detected, which prevents \n",
+      "  the requested tolerance from being achieved.  The error may be \n",
+      "  underestimated.\n",
+      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "integral     = 0.355996\n",
+      "error        = 0.006181\n",
+      "CPU times: user 8min 44s, sys: 5.75 s, total: 8min 50s\n",
+      "Wall time: 11min 56s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/lib/python3.8/site-packages/scipy/integrate/quadpack.py:879: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
+      "  If increasing the limit yields no improvement it is advised to analyze \n",
+      "  the integrand in order to determine the difficulties.  If the position of a \n",
+      "  local difficulty can be determined (singularity, discontinuity) one will \n",
+      "  probably gain from splitting up the interval and calling the integrator \n",
+      "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
+      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
      ]
     }
    ],
@@ -349,7 +407,7 @@
     "rng = np.random.default_rng()\n",
     "\n",
     "n = 3\n",
-    "p = 1.25\n",
+    "p = 1.5\n",
     "alpha = (-1-(n-0.5)/p)\n",
     "\n",
     "print(\"n = %d\" % n)\n",
@@ -360,6 +418,12 @@
     "assert(p*(1+alpha) <= 0)\n",
     "assert(p*(1+alpha) > -n)\n",
     "\n",
+    "# generate random polynomial coefficients\n",
+    "# to get sigma(0)=0 put sig0 to zeros\n",
+    "#sig0 = rng.normal(size=[n])\n",
+    "#sig1 = rng.normal(size=[n,n])\n",
+    "#sig2 = rng.normal(size=[n,n,n])\n",
+    "#sig3 = rng.normal(size=[n,n,n,n])\n",
     "sig0 = rng.uniform(low=-1.0,high=1.0,size=[n])\n",
     "sig1 = rng.uniform(low=-1.0,high=1.0,size=[n,n])\n",
     "sig2 = rng.uniform(low=-1.0,high=1.0,size=[n,n,n])\n",
