--- a/numerics.ipynb
+++ b/numerics.ipynb
@@ -72,7 +72,7 @@
    "id": "b768e986",
    "metadata": {},
    "source": [
-    "The integrand $$\\sigma_i(x+z) = \\sigma_{0,i} + \\sum_{j} \\sigma_{1,i,j}z_j + \\sum_{j,k} \\sigma_{2,i,j,k}z_jz_k + \\sum_{j,k} \\sigma_{3,i,j,k,\\ell}z_jz_kz_\\ell$$ is implemented in Cython to speed up the integration, see below."
+    "The integrand $$\\sigma_i(x+z) = \\sigma_{0,i} + \\sum_{j} \\sigma_{1,i,j}z_j + \\sum_{j,k} \\sigma_{2,i,j,k}z_jz_k + \\sum_{j,k,\\ell} \\sigma_{3,i,j,k,\\ell}z_jz_kz_\\ell$$ is implemented in Cython to speed up the integration, see below."
    ]
   },
   {
