--- a/integral_trace_num.ipynb
+++ b/integral_trace_num.ipynb
@@ -39,65 +39,9 @@
    "execution_count": 2,
    "id": "2cb41fe3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:16271:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:16393:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:16657:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:16806:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:19448:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
-      "                    CYTHON_FALLTHROUGH;\n",
-      "                    ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:361:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
-      "      #define CYTHON_FALLTHROUGH __attribute__((fallthrough))\n",
-      "                                 ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:19459:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
-      "                    CYTHON_FALLTHROUGH;\n",
-      "                    ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_33c3760f90bb34fec4ffeab207195a9a.c:361:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
-      "      #define CYTHON_FALLTHROUGH __attribute__((fallthrough))\n",
-      "                                 ^\n",
-      "6 warnings generated.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%cython -f -c=-O3 \n",
+    "%%cython -f -c=-O3 -c=-Wno-deprecated-declarations -c=-Wno-unreachable-code-fallthrough\n",
     "#-a\n",
     "\n",
     "from cpython.pycapsule cimport (PyCapsule_New,\n",
@@ -243,10 +187,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Integral over the sphere, I = -1.949510\n",
-      "Trace of A,           tr(A) = -1.949510\n",
-      "CPU times: user 2.33 s, sys: 35.9 ms, total: 2.37 s\n",
-      "Wall time: 2.38 s\n"
+      "Integral over the sphere, I = 1.300119\n",
+      "Trace of A,           tr(A) = 1.300119\n",
+      "CPU times: user 19.7 s, sys: 301 ms, total: 20 s\n",
+      "Wall time: 20 s\n"
      ]
     }
    ],
