--- a/numerics.ipynb
+++ b/numerics.ipynb
@@ -79,68 +79,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "2cb41fe3",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:16802:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:16924:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:17188:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:17337:3: warning: 'tp_print' is deprecated [-Wdeprecated-declarations]\n",
-      "  0, /*tp_print*/\n",
-      "  ^\n",
-      "/opt/miniconda3/include/python3.8/cpython/object.h:260:5: note: 'tp_print' has been explicitly marked deprecated here\n",
-      "    Py_DEPRECATED(3.8) int (*tp_print)(PyObject *, FILE *, int);\n",
-      "    ^\n",
-      "/opt/miniconda3/include/python3.8/pyport.h:515:54: note: expanded from macro 'Py_DEPRECATED'\n",
-      "#define Py_DEPRECATED(VERSION_UNUSED) __attribute__((__deprecated__))\n",
-      "                                                     ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:19982:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
-      "                    CYTHON_FALLTHROUGH;\n",
-      "                    ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:361:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
-      "      #define CYTHON_FALLTHROUGH __attribute__((fallthrough))\n",
-      "                                 ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:19993:21: warning: fallthrough annotation in unreachable code [-Wunreachable-code-fallthrough]\n",
-      "                    CYTHON_FALLTHROUGH;\n",
-      "                    ^\n",
-      "/Users/anton/.ipython/cython/_cython_magic_83bd28de278beba8067adbc813334a6e.c:361:34: note: expanded from macro 'CYTHON_FALLTHROUGH'\n",
-      "      #define CYTHON_FALLTHROUGH __attribute__((fallthrough))\n",
-      "                                 ^\n",
-      "6 warnings generated.\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%%cython -f -c=-O3\n",
+    "%%cython -f -c=-O3 -c=-Wno-deprecated-declarations -c=-Wno-unreachable-code-fallthrough\n",
     "#-a\n",
     "\n",
     "from cpython.pycapsule cimport (PyCapsule_New,\n",
@@ -314,7 +256,7 @@
    "id": "d41dafc4",
    "metadata": {},
    "source": [
-    "This is just a warap-around the lower level Cython code, which computes the normalization constant before calling the numerical quadrature."
+    "This is just a wrap-around the lower level Cython code, which computes the normalization constant before calling the numerical quadrature."
    ]
   },
   {
@@ -353,6 +295,18 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "7800204f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter warnings from scipy.integrate.nquad\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "216da86e",
    "metadata": {},
    "outputs": [
@@ -364,40 +318,11 @@
       "p = 1.500000\n",
       "alpha = -2.666667\n",
       "delta        = 0.000001\n",
-      "div sigma(0) = 0.362177\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/lib/python3.8/site-packages/scipy/integrate/quadpack.py:879: IntegrationWarning: The occurrence of roundoff error is detected, which prevents \n",
-      "  the requested tolerance from being achieved.  The error may be \n",
-      "  underestimated.\n",
-      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "integral     = 0.355996\n",
-      "error        = 0.006181\n",
-      "CPU times: user 8min 44s, sys: 5.75 s, total: 8min 50s\n",
-      "Wall time: 11min 56s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/lib/python3.8/site-packages/scipy/integrate/quadpack.py:879: IntegrationWarning: The maximum number of subdivisions (50) has been achieved.\n",
-      "  If increasing the limit yields no improvement it is advised to analyze \n",
-      "  the integrand in order to determine the difficulties.  If the position of a \n",
-      "  local difficulty can be determined (singularity, discontinuity) one will \n",
-      "  probably gain from splitting up the interval and calling the integrator \n",
-      "  on the subranges.  Perhaps a special-purpose integrator should be used.\n",
-      "  quad_r = quad(f, low, high, args=args, full_output=self.full_output,\n"
+      "div sigma(0) = 0.578685\n",
+      "integral     = 0.579680\n",
+      "error        = 0.000995\n",
+      "CPU times: user 6min 8s, sys: 5.67 s, total: 6min 14s\n",
+      "Wall time: 6min 15s\n"
      ]
     }
    ],
