--- a/integral_trace_num.ipynb
+++ b/integral_trace_num.ipynb
@@ -22,7 +22,7 @@
     "  \\int_{\\mathbb{S}^{n-1}}\n",
     "  \\left|e^T s\\right|^{p-2}\n",
     "  s^T\\left[(p-1)I  + (2-p)ee^T\\right]As\n",
-    "  \\,\\mathrm{d}s = K_{n,p} \\mathrm{trace} A,\n",
+    "  \\,\\mathrm{d}s = K_{p,n} \\mathrm{trace} A,\n",
     "$$\n",
     "where\n",
     "$$\n",
