--- a/integral_trace_num.ipynb
+++ b/integral_trace_num.ipynb
@@ -15,8 +15,8 @@
    "id": "94f8aecb",
    "metadata": {},
    "source": [
-    "We check numerically that $e\\in \\mathbb{S}^{n-1}$ and $A\\in \\mathbb{R}^{n\\times n}$ be arbitrary.\n",
-    "Then\n",
+    "Let $e\\in \\mathbb{S}^{n-1}$ and $A\\in \\mathbb{R}^{n\\times n}$ be arbitrary.\n",
+    "We check numerically that\n",
     "$$\n",
     "  |\\mathbb{S}^{n-1}|^{-1}\n",
     "  \\int_{\\mathbb{S}^{n-1}}\n",
