--- a/integral_trace_num.ipynb
+++ b/integral_trace_num.ipynb
@@ -15,7 +15,7 @@
    "id": "94f8aecb",
    "metadata": {},
    "source": [
-    "Let $e\\in \\mathbb{S}^{n-1}$ and $A\\in \\mathbb{R}^{n\\times n}$ be arbitrary.\n",
+    "Let $n\\in \\mathbb{N}$, $n\\geq 2$, $p\\in \\mathbb{R}$, $1<p<+\\infty$, $\\mathbb{S}^{n-1}$ be the $n-1$-dimensional unit sphere, and $e\\in \\mathbb{S}^{n-1}$ and $A\\in \\mathbb{R}^{n\\times n}$ be arbitrary.\n",
     "We check numerically that\n",
     "$$\n",
     "  |\\mathbb{S}^{n-1}|^{-1}\n",
