--- a/numerics.ipynb
+++ b/numerics.ipynb
@@ -15,7 +15,7 @@
    "id": "94f8aecb",
    "metadata": {},
    "source": [
-    "Let \n",
+    "Let $n\\in \\mathbb{N}$, $n\\geq 2$, $p\\in \\mathbb{R}$, $1<p<+\\infty$, $\\mathbb{S}^{n-1}$ be the $n-1$-dimensional unit sphere, and\n",
     "$$\n",
     "  K_{p,n}= |\\mathbb{S}^{n-1}|^{-1} \\int_{\\mathbb{S}^{n-1}}\n",
     "  \\left|e^T s\\right|^{p}\n",
@@ -64,7 +64,7 @@
    "id": "1d336774",
    "metadata": {},
    "source": [
-    "Finally, our main example of $\\sigma$ is going to be a function, whose components are random polynomials of degree $3$. Such functions obviously do not have compact support, but the value of the integral we are trying to compute depends only on the function in the vicinity of $x$, so this is not a problem."
+    "Finally, our main example of $\\sigma$ is going to be a function, whose components are random polynomials of degree $3$. Such functions obviously do not have compact support, but the value of the integral we are trying to compute depends only on the function in the vicinity of $x$, so this is not a problem.  Furthermore, we simply put $x=0$ without any loss of generality."
    ]
   },
   {
