--- a/numerics.ipynb
+++ b/numerics.ipynb
@@ -33,7 +33,7 @@
     "|\\sigma(x+z)|^{2-p} |\\sigma(x+z)\\cdot z|^{p-2} \n",
     "[\\sigma(x+z)\\cdot z] w^p_\\delta(z)\\,\\mathrm{d}z = \\text{div} \\sigma(x),\n",
     "$$\n",
-    "for each $x \\in \\mathbb{R}^n$ and $1<p<\\infty$."
+    "for each $x \\in \\mathbb{R}^n$."
    ]
   },
   {
